# ADCCollector

./: .gitignore  CMakeLists.txt  README.md  adc.cpp  adc.h  centralwidget.cpp  centralwidget.h  channelsettingswidget.cpp  channelsettingswidget.h  channelssettingstabwidget.cpp  channelssettingstabwidget.h  chartwidget.cpp  chartwidget.h  directoryselector.cpp  directoryselector.h  globalsettingstabwidget.cpp  globalsettingstabwidget.h  infowidget.cpp  infowidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h
